- Обновлена структура контроллеров: везде приходит и отправляются DTO, обернутые в ResponseEntity